# federated-learning-security-portfolio

./: .gitignore  30_Days_Project_Improved_Part_1.md  30_Days_Project_Improved_Part_2.md  30_Days_Project_Improved_Part_3.md  CODE_REVIEW_IMPROVEMENTS.md  CODE_REVIEW_RESULTS.md  COMPLETION_SUMMARY.md  LICENSE  README.md  REPOSITORY_REFERENCE.md  SECURITY_AUDIT_REPORT.md  push_to_github.sh
01_fraud_detection_core/: README.md
02_federated_learning_foundations/flower_fraud_detection/: .gitignore  README.md  main.py  pyproject.toml  run_experiments.sh  run_tests.py
02_federated_learning_foundations/flower_fraud_detection/config/: base.yaml
02_federated_learning_foundations/flower_fraud_detection/config/strategy/: fedavg.yaml  fedprox.yaml
02_federated_learning_foundations/flower_fraud_detection/src/: __init__.py  client.py  data.py  model.py  server.py  simulation.py  utils.py
02_federated_learning_foundations/flower_fraud_detection/src/strategy/: __init__.py
02_federated_learning_foundations/flower_fraud_detection/tests/: test_strategy.py  test_utils.py
02_federated_learning_foundations/personalized_fl_fraud/: README.md  pyproject.toml
02_federated_learning_foundations/personalized_fl_fraud/config/: experiments.yaml
02_federated_learning_foundations/personalized_fl_fraud/examples/: demo_comparison.py
02_federated_learning_foundations/personalized_fl_fraud/src/: __init__.py
02_federated_learning_foundations/personalized_fl_fraud/src/clients/: __init__.py  personalized_client.py  wrappers.py
02_federated_learning_foundations/personalized_fl_fraud/src/methods/: __init__.py  base.py  fedper.py  per_fedavg.py
02_federated_learning_foundations/personalized_fl_fraud/src/metrics/: visualization.py
02_federated_learning_foundations/personalized_fl_fraud/tests/: test_methods.py
cross_silo_bank_fl/: main.py
(+329 files in other folders)
